@@ -417,10 +417,10 @@ name|void
 name|process
 parameter_list|()
 block|{
-name|LOG
-operator|.
-name|debug
+name|debugLog
 argument_list|(
+name|regionInfo
+argument_list|,
 literal|"Handling OPENED event for "
 operator|+
 name|this
@@ -540,10 +540,10 @@ argument_list|()
 argument_list|)
 condition|)
 block|{
-name|LOG
-operator|.
-name|debug
+name|debugLog
 argument_list|(
+name|regionInfo
+argument_list|,
 literal|"Opened region "
 operator|+
 name|regionInfo
@@ -566,10 +566,10 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|LOG
-operator|.
-name|debug
+name|debugLog
 argument_list|(
+name|regionInfo
+argument_list|,
 literal|"Opened region "
 operator|+
 name|regionInfo
@@ -585,6 +585,49 @@ name|sn
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|debugLog
+parameter_list|(
+name|HRegionInfo
+name|region
+parameter_list|,
+name|String
+name|string
+parameter_list|)
+block|{
+if|if
+condition|(
+name|region
+operator|.
+name|isMetaTable
+argument_list|()
+operator|||
+name|region
+operator|.
+name|isRootRegion
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|string
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|string
 argument_list|)
 expr_stmt|;
 block|}
